--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,7 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+memory_limit = 1073741824
+gas_limit = "18446744073709551615"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
